--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,10 @@
     font-family: roboto;
     src: url(rgl.ttf);
 }
+@font-face {
+    font-family: robotoi;
+    src: url(italic.ttf);
+}
 body{
     display: flex;
     flex-direction: column;
@@ -96,6 +100,7 @@ button{
     display:flex;
     gap: 120px;
     justify-content: center;
+    margin-bottom: 120px;
 }
 .picone{
     display:flex;
@@ -104,4 +109,57 @@ button{
     justify-content: center;
     text-align: center;
     max-width: 150px;
+}
+.bodytwo{
+    background-color: #e5e7eb;
+    padding: 120px;
+    padding-left: 300px;
+    padding-right:300px;
+    justify-content: center;
+    align-items: center;
+}
+.quote{
+    display:flex;
+    font-family: robotoi;
+    font-size: 40px;
+}
+.author{
+    display:flex;
+    flex-direction: row-reverse;
+    font-family: robotob;
+    font-size: 16px;
+}
+.bodythree{
+    background-color: #3882f6;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 300px;
+    padding:70px;
+    border-radius: 15px;
+    gap: 400px;
+}
+.call{
+    color: #f9faf8;
+    font-family: robotob;
+    font-size:120%;
+}
+.sign{
+    color:#f9faf8;
+    font-family: roboto;
+    font-size:100%;
+}
+.sigma{
+    color:#f9faf8;
+    font-family: roboto;
+    font-size:100%;
+    border:2px solid #f9faf8;
+}
+.footer{
+    display:flex;
+    flex:1;
+    justify-content: center;
+    padding:30px;
+    background-color: #1f2937;
+    color:#f9faf8;
 }
